Fix squished images in preview

--- a/css/yarns_microsub_server_admin.css
+++ b/css/yarns_microsub_server_admin.css
@@ -283,6 +283,7 @@
 
 #yarns-preview-container img {
     max-width: 100%;
+    height:auto;
 }
 
 .yarns-preview-item {
